<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rheras.sesion08entregable.PlayFragment"
    android:background="@color/background">

    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/tituloapp"
        android:id="@+id/titulo"
        android:textSize="@dimen/titlesize2"
        android:padding="@dimen/normalpadding"
        android:textColor="@color/text2"
        android:layout_gravity="center_horizontal" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:padding="@dimen/normalpadding"
        >


        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listajugadores"
            android:divider="@color/primary"
            android:dividerHeight="2dp"
            android:background="@color/background"
            android:choiceMode="multipleChoice">
        </ListView>


    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingTop="@dimen/normalpadding">

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pregunta"
            android:id="@+id/ask"
            android:textSize="@dimen/titlesize2"
            android:textColor="@color/text2"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:id="@+id/normal"
                android:onClick="normal"
                android:textColor="@color/text"
                android:background="@color/primary"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/commander"
                android:id="@+id/commander"
                android:textColor="@color/text"
                android:background="@color/primary"
                android:onClick="edh"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/gigante"
                android:onClick="gigant"
                android:id="@+id/gigante"
                android:textColor="@color/text"
                android:background="@color/primary"
                />

        </LinearLayout>



    </LinearLayout>





</LinearLayout>
